[gd_scene load_steps=19 format=2]

[ext_resource path="res://addons/kenney_prototypes/demo/demo_environment.tres" type="Environment" id=1]
[ext_resource path="res://scenes/worlds/chapter_1/chapter1.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/objects/wide_camera_pivot.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/objects/player_node.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/objects/int_pushable_box.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/objects/int_phys_box.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/levels/chapter_one_sys.gd" type="Script" id=7]
[ext_resource path="res://ui/fonts/JetBrainsMono/JetBrainsMono-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://ui/styles/checkbox_objective_focus.tres" type="StyleBox" id=9]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 4, 2, 8 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 14, 2, 4 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 6, 3, 6 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 4, 3, 4 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 7, 7, 7 )

[sub_resource type="CubeMesh" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=9]
size = 12
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[node name="ChapterOne" type="Spatial"]

[node name="System" type="Spatial" parent="."]

[node name="LevelSystem" type="Spatial" parent="System"]
script = ExtResource( 7 )
camera_rig_path = NodePath("../../WideCameraPivot")
food_pickup_timer_path = NodePath("../../AreaTriggers/AreaPickupFood/FoodPickTimer")
checkbox1_path = NodePath("../../UI/Panel/Panel/VBoxContainer/CheckBox1")
checkbox2_path = NodePath("../../UI/Panel/Panel/VBoxContainer/CheckBox2")
checkbox3_path = NodePath("../../UI/Panel/Panel/VBoxContainer/CheckBox3")
checkbox4_path = NodePath("../../UI/Panel/Panel/VBoxContainer/CheckBox4")
checkbox5_path = NodePath("../../UI/Panel/Panel/VBoxContainer/CheckBox5")
checkbox6_path = NodePath("../../UI/Panel/Panel/VBoxContainer/CheckBox6")

[node name="ExitTimeout" type="Timer" parent="System/LevelSystem"]
wait_time = 3.0
one_shot = true

[node name="Env" type="Spatial" parent="."]

[node name="DirectionalLight" type="DirectionalLight" parent="Env"]
transform = Transform( -0.25, -0.69065, 0.678603, -0.0669873, 0.711516, 0.699469, -0.965926, 0.129409, -0.224144, 0, 9, 0 )
light_color = Color( 1, 0.92549, 0.72549, 1 )
light_energy = 1.2
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="Env"]
environment = ExtResource( 1 )

[node name="LevelMesh" type="Spatial" parent="Env"]

[node name="chapter1" parent="Env/LevelMesh" instance=ExtResource( 2 )]

[node name="Players" type="Spatial" parent="."]

[node name="Player_1" parent="Players" groups=["Player 1"] instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -45.8219, 3, 54.1424 )
ActiveCameraNode = NodePath("../../WideCameraPivot")

[node name="Player_2" parent="Players" groups=["Player 2"] instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -41.8219, 3, 54.1424 )
player_one = false
ActiveCameraNode = NodePath("../../WideCameraPivot")

[node name="WideCameraPivot" parent="." instance=ExtResource( 3 )]

[node name="Interactives" type="Spatial" parent="."]

[node name="IntPushableBox" parent="Interactives" groups=["Objective 2"] instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -47, 2.43579, 9 )

[node name="IntPushableBox2" parent="Interactives" groups=["Objective 2"] instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -42, 2.43579, 9 )

[node name="IntPushableBox3" parent="Interactives" groups=["Objective 2"] instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -37, 2.43579, 9 )

[node name="IntPushableBox4" parent="Interactives" groups=["Objective 2"] instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -32, 2.43579, 9 )

[node name="PhysBox" parent="Interactives" groups=["Pickable"] instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -43, 3.42843, -4 )

[node name="PhysBox3" parent="Interactives" groups=["Pickable"] instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -39, 3.42843, -2 )

[node name="PhysBox4" parent="Interactives" groups=["Pickable"] instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -33, 3.42843, -5 )

[node name="PhysBox5" parent="Interactives" groups=["Pickable"] instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -32, 3.42843, -1 )

[node name="PhysBox2" parent="Interactives" groups=["Pickable"] instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -46, 3.42843, -2 )

[node name="AreaTriggers" type="Spatial" parent="."]

[node name="AreaBoxesPlacement" type="Area" parent="AreaTriggers"]
transform = Transform( 0.989356, 0, 0.145513, 0, 1, 0, -0.145513, 0, 0.989356, -20.1267, 1.79204, 16.5944 )

[node name="CollisionShape" type="CollisionShape" parent="AreaTriggers/AreaBoxesPlacement"]
shape = SubResource( 1 )

[node name="AreaRoadBoxes" type="Area" parent="AreaTriggers"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -42, 4, -30.4308 )

[node name="CollisionShape" type="CollisionShape" parent="AreaTriggers/AreaRoadBoxes"]
shape = SubResource( 5 )

[node name="AreaRest" type="Area" parent="AreaTriggers"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.2942, 2.3946, -18.6173 )

[node name="CollisionShape" type="CollisionShape" parent="AreaTriggers/AreaRest"]
shape = SubResource( 2 )

[node name="AreaPickupFood" type="Area" parent="AreaTriggers"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.81327, 2, 41 )

[node name="CollisionShape" type="CollisionShape" parent="AreaTriggers/AreaPickupFood"]
shape = SubResource( 3 )

[node name="FoodPickTimer" type="Timer" parent="AreaTriggers/AreaPickupFood"]
wait_time = 4.0
one_shot = true

[node name="AreaExit" type="Area" parent="AreaTriggers"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 52.7848, 2, 9.19329 )

[node name="CollisionShape" type="CollisionShape" parent="AreaTriggers/AreaExit"]
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="AreaTriggers/AreaExit"]
mesh = SubResource( 6 )
material/0 = null

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="UI"]
anchor_right = 0.3
anchor_bottom = 0.37
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
custom_styles/panel = SubResource( 7 )

[node name="Panel" type="Panel" parent="UI/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
custom_styles/panel = SubResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 174.8

[node name="Label" type="Label" parent="UI/Panel/Panel/VBoxContainer"]
margin_right = 448.0
margin_bottom = 14.0
text = "Objectives"

[node name="CheckBox1" type="CheckBox" parent="UI/Panel/Panel/VBoxContainer"]
margin_top = 18.0
margin_right = 448.0
margin_bottom = 43.0
input_pass_on_modal_close_click = false
custom_fonts/font = SubResource( 9 )
custom_styles/hover = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
shortcut_in_tooltip = false
button_mask = 0
text = "Pindahkan bebatuan besar yang menghalangi jalan ke tempatnya"

[node name="CheckBox2" type="CheckBox" parent="UI/Panel/Panel/VBoxContainer"]
margin_top = 47.0
margin_right = 448.0
margin_bottom = 72.0
focus_mode = 0
input_pass_on_modal_close_click = false
custom_fonts/font = SubResource( 9 )
custom_styles/hover = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
shortcut_in_tooltip = false
button_mask = 0
enabled_focus_mode = 0
text = "Ratakan area jalan dengan mendorong alat bantu"

[node name="CheckBox3" type="CheckBox" parent="UI/Panel/Panel/VBoxContainer"]
margin_top = 76.0
margin_right = 448.0
margin_bottom = 101.0
focus_mode = 0
input_pass_on_modal_close_click = false
custom_fonts/font = SubResource( 9 )
custom_styles/hover = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
shortcut_in_tooltip = false
button_mask = 0
enabled_focus_mode = 0
text = "P2 beristirahat di dekat pohon"

[node name="CheckBox4" type="CheckBox" parent="UI/Panel/Panel/VBoxContainer"]
margin_top = 105.0
margin_right = 448.0
margin_bottom = 130.0
focus_mode = 0
input_pass_on_modal_close_click = false
custom_fonts/font = SubResource( 9 )
custom_styles/hover = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
shortcut_in_tooltip = false
button_mask = 0
enabled_focus_mode = 0
text = "P1 mengambil makanan"

[node name="CheckBox5" type="CheckBox" parent="UI/Panel/Panel/VBoxContainer"]
margin_top = 134.0
margin_right = 448.0
margin_bottom = 159.0
focus_mode = 0
input_pass_on_modal_close_click = false
custom_fonts/font = SubResource( 9 )
custom_styles/hover = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
shortcut_in_tooltip = false
button_mask = 0
enabled_focus_mode = 0
text = "P1 kembali ke P2 dengan makanan dan berita"

[node name="CheckBox6" type="CheckBox" parent="UI/Panel/Panel/VBoxContainer"]
margin_top = 163.0
margin_right = 448.0
margin_bottom = 188.0
focus_mode = 0
input_pass_on_modal_close_click = false
custom_fonts/font = SubResource( 9 )
custom_styles/hover = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
shortcut_in_tooltip = false
button_mask = 0
enabled_focus_mode = 0
text = "Keluar area projek jalan"

[connection signal="timeout" from="System/LevelSystem/ExitTimeout" to="System/LevelSystem" method="_on_ExitTimeout_timeout"]
[connection signal="body_entered" from="AreaTriggers/AreaBoxesPlacement" to="System/LevelSystem" method="_on_AreaBoxesPlacement_body_entered"]
[connection signal="body_exited" from="AreaTriggers/AreaBoxesPlacement" to="System/LevelSystem" method="_on_AreaBoxesPlacement_body_exited"]
[connection signal="body_entered" from="AreaTriggers/AreaRoadBoxes" to="System/LevelSystem" method="_on_AreaRoadBoxes_body_entered"]
[connection signal="body_exited" from="AreaTriggers/AreaRoadBoxes" to="System/LevelSystem" method="_on_AreaRoadBoxes_body_exited"]
[connection signal="body_entered" from="AreaTriggers/AreaRest" to="System/LevelSystem" method="_on_AreaRest_body_entered"]
[connection signal="body_exited" from="AreaTriggers/AreaRest" to="System/LevelSystem" method="_on_AreaRest_body_exited"]
[connection signal="body_entered" from="AreaTriggers/AreaPickupFood" to="System/LevelSystem" method="_on_AreaPickupFood_body_entered"]
[connection signal="timeout" from="AreaTriggers/AreaPickupFood/FoodPickTimer" to="System/LevelSystem" method="_on_FoodPickTimer_timeout"]
[connection signal="body_entered" from="AreaTriggers/AreaExit" to="System/LevelSystem" method="_on_AreaExit_body_entered"]
